@@ -25,14 +25,14 @@
 #endif
 #include <sys/types.h>
 
-#ifdef HAVE_DB1_DB_H
-# include <db1/db.h>
-#else
 #ifdef HAVE_DB_185_H
 # include <db_185.h>
 #else
-# include <db.h>
-#endif
+# ifdef HAVE_DB_H
+#  include <db.h>
+# else
+#  include <db1/db.h>
+# endif
 #endif
 
 #include <string.h>
