@@ -52,14 +52,14 @@ char *alloca ();
 #include <ctype.h>
 #include <errno.h>
 
-#ifdef HAVE_DB1_DB_H
-#include <db1/db.h>
-#else
 #ifdef HAVE_DB_185_H
 # include <db_185.h>
 #else
-# include <db.h>
-#endif
+# ifdef HAVE_DB_H
+#  include <db.h>
+# else
+#  include <db1/db.h>
+# endif
 #endif
 
 #include "libgnomeP.h"
