@@ -1,3 +1,9 @@
+1999-08-31  Federico Mena Quintero  <federico@redhat.com>
+
+	* gnome-metadata.c: Arrange order of #ifdef tests for db.
+
+	* gnome-dump.c: Likewise.
+
 1999-08-30  Federico Mena Quintero  <federico@redhat.com>
 
 	* gnome-triggers.h: Make it build.
